# arapuca

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  arapuca.pc.in  build.rs  cbindgen.toml
.github/workflows/: ci.yaml  release.yaml
doc/: arapuca.1.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: filter_caller_env.rs  reject_cgroup_paths.rs  sanitize_audit_string.rs  sanitize_task_id.rs  validate_guest_path.rs  validate_guest_permissions.rs
fuzz/seeds/filter_caller_env/: basic-path  blocked-bash  blocked-ld
fuzz/seeds/reject_cgroup_paths/: deny-dot-component  deny-dotdot  deny-dotdot-back  deny-excess-dotdot  near-prefix  valid-tmp
fuzz/seeds/sanitize_audit_string/: control-del  control-null  control-soh  lri  lrm  rlo  zwsp
fuzz/seeds/sanitize_task_id/: invalid-dot  invalid-dotdot  invalid-slash  invalid-space  invalid-underscore  valid-dashes
fuzz/seeds/validate_guest_path/: deny-agent  deny-cidata  deny-dev-fd  deny-dot-in-proc  deny-double-slash  deny-sys  traversal-dotdot  traversal-to-dev  traversal-to-proc  valid-dot-component  valid-near-dev  valid-near-prefix  valid-near-sys  valid-tmp
fuzz/seeds/validate_guest_permissions/: invalid-reference  invalid-symbolic
include/: arapuca.h
src/: audit.rs  bridge.rs  cgroup.rs  diskquota.rs  dns.rs  env.rs  error.rs  ffi.rs  landlock.rs  lib.rs  netns.rs  pidns.rs  process.rs  profile.rs  rlimit.rs  seccomp.rs  selfexec.rs  terminal.rs  unotify.rs  validate.rs  wrapper.rs
src/images/: cache.rs  centos.rs  cloudinit.rs  download.rs  fedora.rs  metadata.rs  mod.rs  overlay.rs  probe.rs  provider.rs  setup.rs
src/platform/: fd.rs  linux.rs  microvm.rs  microvm_net.rs  mod.rs  other.rs  windows.rs
src/platform/darwin/: darwin_profile.rs  mod.rs
src/vm/: daemon.rs  exec.rs  mod.rs  protocol.rs  state.rs
tests/: adversarial.rs  audit.rs  bridge.rs  darwin.rs  dispatch.rs  pidns.rs  run.rs  seccomp_debug.rs  stdio.rs  unotify.rs
