[package]
name = "arapuca"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Linux process sandbox: Landlock, seccomp BPF, cgroups v2, network namespace isolation"
repository = "https://github.com/sergio-correia/arapuca"
publish = false

[lib]
name = "arapuca"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "arapuca"
path = "src/bin/arapuca.rs"

[dependencies]
log = "0.4"
tempfile = "3"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.30", features = ["fs", "process", "sched", "signal", "user"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5"

[dev-dependencies]
env_logger = "0.11"

[build-dependencies]
cbindgen = "0.28"

[profile.release]
lto = true
strip = true
