[package]
name = "arapuca"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Cross-platform process sandbox: Landlock/seccomp/cgroups (Linux), Seatbelt (macOS), AppContainer/Job Objects (Windows)"
repository = "https://github.com/sergio-correia/arapuca"
publish = false

[lib]
name = "arapuca"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "arapuca"
path = "src/bin/arapuca.rs"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tempfile = "3"
thiserror = "2"

[features]
serde = ["dep:serde", "dep:serde_json"]
microvm = ["dep:reqwest"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.30", features = ["fs", "process", "sched", "signal", "user"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Isolation",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5"

reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false, optional = true }

[dev-dependencies]
env_logger = "0.11"

[build-dependencies]
cbindgen = "0.28"

[profile.release]
lto = true
strip = true
