[package]
name = "arapuca"
version = "0.2.3"
edition = "2024"
license = "Apache-2.0"
description = "Cross-platform process sandbox: Landlock/seccomp/cgroups (Linux), Seatbelt (macOS), AppContainer/Job Objects (Windows)"
repository = "https://github.com/sergio-correia/arapuca"
publish = false

[lib]
name = "arapuca"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "arapuca"
path = "src/bin/arapuca.rs"

[[bin]]
name = "arapuca-agent"
path = "src/bin/arapuca-agent.rs"
required-features = ["vm-agent"]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tempfile = "3"
thiserror = "2"

[features]
serde = ["dep:serde", "dep:serde_json"]
vm-agent = []
microvm = ["dep:reqwest", "dep:krun-sys", "dep:openssl", "dep:gpt", "dep:nbd"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["fs", "process", "sched", "signal", "user"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Isolation",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
krun-sys = { version = "1.10", optional = true }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false, optional = true }
openssl = { version = "0.10", optional = true }
gpt = { version = "4.1", optional = true }
nbd = { version = "0.3", optional = true }

[target.'cfg(all(target_os = "linux", any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
seccompiler = "0.5"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(seccomp_supported)'] }

[dev-dependencies]
env_logger = "0.11"
